src/test/ui/error-codes/E0162.stderr
error[E0162]: irrefutable if-let pattern
  --> $DIR/E0162.rs:15:12
   |
15 |     if let Irrefutable(x) = irr { //~ ERROR E0162
   |            ^^^^^^^^^^^^^^ irrefutable pattern

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0162"
